--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,48 @@
 
 body {
     margin: 0;
-    font-size: 16px;
+    font-size: 18px;
+    font-family: -apple-system,
+    BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "NotoSans", sans-serif;
+
 }
 
 .container {
     margin: 0 auto;
     max-width: 960px;
     width: 100%;
+    
 }
 header .container{
 display: block;
 
-
 }
 header .container li {
 display: inline;
-
 }
 header .container nav{
 text-align: right;
-}
-header .container  h1, li{
-font-size:18px;
 
 }
+header .container a{
+color:#6b7280;
+}
+header .container a:hover{
+    color:#5A67D8;
+}
 header  h1{
+    font-size: 18px;
     justify-self: center;
 }
 
-.overview-hero > div{
-
-    display:grid;
-    grid-template-columns: 1fr 2fr;
-      
+.overview-hero{
+    background-color: #E2E8F0;
 }
-
+.overview-hero > div{
+    display:grid;
+    grid-template-columns: 1fr 2fr; 
+    padding: 50px; 
+}
 .overview-hero-image{
 justify-self: right;
 margin-right: 20px;
@@ -43,34 +50,76 @@ margin-right: 20px;
 .overview-hero-text{
  padding-right: 100px;
 }
-.learn-about .container> div{
-display: grid;
-grid-template-columns: 1fr 1fr 1fr;
 
+.learn-about{
+    padding: 30px;
 }
+.learn-about .container> div{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    border-color: #4A5568;
+}
+
 .learn-about .container div{
-    margin-right: 40px;
-    padding: 0px;
+    margin-right: 20px;
+}
+.learn-about h2{
+    font-size: 24px;
+    color: #48BB78;
+}
+.learn-about h3{
+    font-size: 21px;
+    color: #48BB78;
+}
+.card{
+    border-color:green;
+    border-radius: 5px;
+    border-width: 100px;
+}
+.testing{
+    background-color: #4A5568;
+    color: white;
 }
 .testing >div{
 display:grid;
 grid-template-columns: 1fr 1fr;
+padding: 100px;
 }
 .cta{
     align-self: center;
     justify-self: center;
+    color: white;
+    background-color: #48BB78;
+    padding: 15px 50px;
+    border-radius: 5px;
+}
+.cta a{
+    color:white;
+    text-decoration: none;
+}
+.stories{
+    padding: 60px;
 }
 .stories .container > article{
     display:grid;
     grid-template-columns: 1fr 2fr;
     padding: 10px;
+    
 }
 .stories .container > article img{
     border-radius: 50%;
     justify-self: right;
     margin-right: 25px;
 }
-
+.stories h2, a{
+   color: #5A67D8;
+   text-decoration: none;
+}
+.newsletter{
+    padding: 50px;
+    background-color: #48BB78;
+    color: white;
+}
 .newsletter .container > form{
     display: flex;
     flex-direction: row;
@@ -85,31 +134,24 @@ grid-template-columns: 1fr 1fr;
 }
 .newsletter .container{
     text-align: center;
-   
 }
 input[type="email"]{
     height: 40px;
     width: 270px;
-    
+    border-radius: 5px;
+    border-color: white;
+    padding-left: 10px;
 }
 button[type="submit"]{
     width: 170px;
+    border-radius: 5px;
+    color: white;
+    background-color: #5A67D8;
+    border-color: #5A67D8;
 }
-/*.learn-about{grid-area:row2;}
-.testing{grid-area:row3;}
-.stories{grid-area:row4;}
-.newsletter{grid-area:row5;}
-footer{grid-area:footer;}
 
-.container{
- display: grid;
- grid-template-columns: 1fr 1fr;
- grid-template-rows: 0.05fr 0.05fr 0.05fr 0.05fr 0.05fr 0.05fr; 
- grid-template-areas: 
-    "header header"
-    "row2 row2"
-    "row3 row3" 
-    "row4 row4" 
-    "row5 row5" 
-    "footer footer"; 
-}*/
+footer{
+    padding: 15px;
+    color:white;
+    background-color: #4A5568;
+}
